Simplify synchronization by collapsing it onto ConnectionImpl, clean up things FindBugs found on ConnectionImpl.